# skiros2_std_lib

./: .gitignore  LICENSE.md
skiros2_std_descriptions/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
skiros2_std_descriptions/src/skiros2_std_descriptions/: skill_descriptions.py
skiros2_std_reasoners/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_std_reasoners/launch/: world_model_server.launch
skiros2_std_reasoners/skiros2_std_reasoners/: aau_spatial_reasoner.py
skiros2_std_reasoners/src/skiros2_std_reasoners/: aau_spatial_reasoner.py
skiros2_std_reasoners/test/: test
skiros2_std_skills/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
skiros2_std_skills/skiros2_std_skills/: action_client_primitive.py  service_client_primitive.py  task_planner.py  thread_primitive.py  utility_primitives.py  utils.py
skiros2_std_skills/src/skiros2_std_skills/: action_client_primitive.py  task_planner.py  utility_primitives.py
