<?xml version="1.0"?>
<package>
  <name>skiros2_std_descriptions</name>
  <version>1.0.0</version>
  <description>SkiROS library of standard descriptions for skills</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>
  <author email="bjarne@m-tech.aau.dk">Bjarne Grossmann</author>
  <author>Bjarne Grossmann</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_world_model</run_depend>
</package>
