<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skiros2_std_reasoners</name>
  <version>1.0.5</version>
  <description>SkiROS library of standard reasoners for world model</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-rdflib</exec_depend>
  <exec_depend>skiros2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
